force-app/main/default/objects/TCI_Job__c/TCI_Job__c.object-meta.xml
<CustomObject>
    <label>TCI Job</label>
    <nameField>
        <displayFormat>TCI-{0000}</displayFormat>
        <label>TCI Job</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TCI Job</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>