force-app/main/default/objects/TCI_Job__c/fields/Application_Archived__c.field-meta.xml
<CustomField>
    <fullName>Application_Archived__c</fullName>
    <label>Application Archived</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>