force-app/main/default/objects/TCI_Job__c/fields/Last_Job_Run_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Job_Run_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Job Run By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TCI_Job</relationshipName>
    <type>Lookup</type>
</CustomField>