force-app/main/default/objects/TCI_Job__c/fields/Last_Job_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Job_Run_Date__c</fullName>
    <label>Last Job Run Date</label>
    <type>DateTime</type>
</CustomField>