force-app/main/default/objects/TCI_Job__c/fields/Total_Applications__c.field-meta.xml
<CustomField>
    <fullName>Total_Applications__c</fullName>
    <label>Total Applications</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>