force-app/main/default/objects/TCI_Job__c/listViews/TCI_CSV_Jobs.listView-meta.xml
<ListView>
    <fullName>TCI_CSV_Jobs</fullName>
    <columns>NAME</columns>
    <columns>Application_Archived__c</columns>
    <columns>Total_Applications__c</columns>
    <columns>Last_Job_Run_By__c</columns>
    <columns>Last_Job_Run_Date__c</columns>
    <columns>Job_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>TCI CSV Jobs</label>
</ListView>